--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+beautifulsoup4==4.13.3
 black==25.1.0
 bottle==0.13.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+chime==0.7.0
 click==8.1.8
 idna==3.10
 jeepney==0.9.0
@@ -10,15 +12,22 @@ mypy-extensions==1.0.0
 notify_py==0.3.43
 packaging==24.2
 pathspec==0.12.1
+pillow==11.1.0
 platformdirs==4.3.7
 proxy_tools==0.1.0
+pycairo==1.27.0
+PyGObject==3.52.3
 PyQt6==6.8.1
 PyQt6-Qt6==6.8.2
 PyQt6-WebEngine==6.8.0
 PyQt6-WebEngine-Qt6==6.8.2
 PyQt6_sip==13.10.0
+pystray==0.19.5
+python-xlib==0.33
 pywebview==5.4
 QtPy==2.4.3
 requests==2.32.3
+six==1.17.0
+soupsieve==2.6
 typing_extensions==4.13.0
 urllib3==2.3.0
